    described in CLHS 7.6.5 and 7.6.5.1.
  * bug fix: LOOP forms using NIL as a for-as-arithmetic counter no
    longer raise an error; further, using a list as a for-as-arithmetic
    counter now raises a meaningful error.
  * fixed bug 213a: even fairly unreasonable CONS type specifiers are
    now understood by sequence creation functions such as MAKE-SEQUENCE
    and COERCE.
  * compiler enhancement: SIGNUM is now better able to derive the type
    of its result.
  * type declarations inside WITH-SLOTS are checked.  (reported by
    salex on #lisp)
  * loading incompatible FASLs, e.g. those produced by an incompatible
    lisp implementation, cause a condition of type SB-EXT:INVALID-FASL
    (a subtype of ERROR) to be raised.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** incorrect optimization of TRUNCATE for a positive first
       argument and negative second.
    ** compiler failure in let-convertion during flushing dead code.
    ** compiler failure while deriving type of TRUNCATE on an
       interval, containing 0.
    ** ASH of a negative bignum by a negative bignum count now returns
       -1, not 0.
    ** intersection of CONS types now canonicalizes properly, fixing
       inconsistencies in SUBTYPEP.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 